# asciiArt

./: .bumpversion.cfg  CITATION.cff  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  next_steps.md  project_setup.md  pyproject.toml  setup.cfg  sonar-project.properties  todo.md
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml
asciiart/: __init__.py  art.py  my_module.py
docs/: Makefile  conf.py  index.rst  make.bat
tests/: test_my_module.py
